--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
                 <picture class="preview__back__imge">
                     <source media="(max-width: 886px)" srcset="img/im_for_phone.jpg">
                     <source media="(min-width: 887px)" srcset="img/garrett-parker-DlkF4-dbCOU-unsplash1.jpg">
-                    <img src="img/garrett-parker-DlkF4-dbCOU-unsplash1.jpg">
+                    <img src="img/garrett-parker-DlkF4-dbCOU-unsplash1.jpg" alt="mountains">
                 </picture>
                 <div class="wrap">
                     <h1 class="preview__title">Explore the beauty of <br> the World</h1>
                     <div class="preview__text">Receive personalized recommendations for countries, hotels, activities and more</div>
                     <div class="preview__row">
-                        <input type="text" placeholder="What would you like to do?" class="preview__search">
-                        </input>
+                        <input class="preview__search" type="text" placeholder="What would you like to do?"></input>
                         <div class="preview__btn">
                             <button>Start Planning</button>
                         </div>
@@ -107,7 +106,7 @@
                     <div class="destinations__btn">
                         <button class="destinations__textBtn">
                             <img src="img/bi_arrow-right.svg" alt="arrow"> 
-                            <p>Find More</p> 
+                            Find More
                         </button>
                     </div>
                 </div>
@@ -168,7 +167,7 @@
                     </div>
                     <div class="storis__btn">
                         <button class="storis__textBtn">
-                            <img src="img/bi_arrow-right.svg" alt="arrow"> <p>See More</p> 
+                            <img src="img/bi_arrow-right.svg" alt="arrow"> See More 
                         </button>
                     </div>
                 </div>
@@ -195,7 +194,7 @@
 
             </ul>
         </footer>
-</div>
+    </div>
     <script src="js/js.js"></script>
 </body>
 
