--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                     <h1 class="preview__title">Explore the beauty of <br> the World</h1>
                     <div class="preview__text">Receive personalized recommendations for countries, hotels, activities and more</div>
                     <div class="preview__row">
+                        <label>
                         <input class="preview__search" type="text" placeholder="What would you like to do?"></input>
+                    </label
                         <div class="preview__btn">
                             <button>Start Planning</button>
                         </div>
