--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="preview__text">Receive personalized recommendations for countries, hotels, activities and more</div>
                     <div class="preview__row">
                         <label for="aa">
-                            <input id="aa" class="preview__search" type="text" placeholder="What would you like to do?"></input>
+                            <input id="aa" class="preview__search" type="text" placeholder="What would you like to do?">a</input>
                         </label>
                         <div class="preview__btn">
                             <button>Start Planning</button>
