--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
                     <h1 class="preview__title">Explore the beauty of <br> the World</h1>
                     <div class="preview__text">Receive personalized recommendations for countries, hotels, activities and more</div>
                     <div class="preview__row">
-                        <label for="aa">
-                            <input id="aa" class="preview__search" type="text" placeholder="What would you like to do?">a
-                            </input>
-                        </label>
+                        <input  class="preview__search" type="text" placeholder="What would you like to do?">
                         <div class="preview__btn">
                             <button>Start Planning</button>
                         </div>
