--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <h1 class="preview__title">Explore the beauty of <br> the World</h1>
                     <div class="preview__text">Receive personalized recommendations for countries, hotels, activities and more</div>
                     <div class="preview__row">
-                        <input class="preview__search" type="text" placeholder="What would you like to do?"></input>
+                        <input class="preview__search" type="text" placeholder="What would you like to do?">
                         <div class="preview__btn">
                             <button>Start Planning</button>
                         </div>
