--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </section>
             <section id="Plan" class="steps">
                 <div class="wrap">
-                    <h2 class="steps__title">3 STEPS TO THE PERFECT TRIP</h2>
+                    <h2 class="steps__title">3 Steps to the perfect trip</h2>
                     <div class="steps__row">
                         <div class="steps__block">
                             <img class="steps__icicon" src="img/Vector1.svg" alt="bicycle">
@@ -82,7 +82,7 @@
             </section>
             <section id="destinations" class="destinations">
                 <div class="wrap">
-                    <h2>POPULAR DESTINATIONS</h2>
+                    <h2>Popular destinations</h2>
                     <div class="destinations__slider">
                         <div onclick="clikFirst()" id="a">
                             <img class="destinations__imge" src="img/Rectangle23.jpg" alt="Spain">
@@ -90,11 +90,11 @@
                         </div>
                         <div id="b" onclick="clikSecand()">
                             <img class="destinations__imge" src="img/Rectangle24.jpg" alt="JAPAN">
-                            <p>JAPAN</p>
+                            <p>Japan</p>
                         </div>
                         <div id="c" onclick="clikTird()">
                             <img class="destinations__imge" src="img/Rectangle25.jpg" alt="USA">
-                            <p>USA</p>
+                            <p>usa</p>
                         </div>
 
 
