--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </div>
                         <div id="c" onclick="clikTird()">
                             <img class="destinations__imge" src="img/Rectangle25.jpg" alt="USA">
-                            <p>usa</p>
+                            <p>USA</p>
                         </div>
 
 
@@ -127,7 +127,7 @@
                             </div>
                             <div class="storis__text">
                                 <h3>10 Photos of Attractive Thailand</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                <p lang="zxx">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                                     laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a class="storis__link" href="">Read More</a></p>
                             </div>
@@ -137,7 +137,7 @@
                                 <img src="img/Rectangle30.jpg" alt="road">
                             </div>
                             <div class="storis__text">
-                                <h3>Canyonlands National Park, Utah</h3>
+                                <h3 lang="zxx">Canyonlands National Park, Utah</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                                     laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a class="storis__link" href="">Read More</a></p>
@@ -149,7 +149,7 @@
                             </div>
                             <div class="storis__text">
                                 <h3>I left my heart in the Mountains!</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                <p lang="zxx">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                                     laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a class="storis__link" href="">Read More</a></p>
                             </div>
@@ -160,7 +160,7 @@
                             </div>
                             <div class="storis__text">
                                 <h3>The Longest journey in my life!</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                <p lang="zxx">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                                     laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a class="storis__link" href="">Read More</a></p>
                             </div>
