--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <nav class="menu">
                     <ul class="menu__row">
                         <li>
-                            <a class="menu__link" href="">How It Works</a>
+                            <a class="menu__link" href="#preview">How It Works</a>
                         </li>
                         <li>
                             <a class="menu__link" href="#Plan">Plan Your Trip</a>
